overflow issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,6 +68,7 @@
     padding: 0;
     font-family: "Poppins", sans-serif;
     box-sizing: border-box;
+    outline: 1px solid red;
   }
 
   body {
